[gd_scene load_steps=47 format=3 uid="uid://bapnnb7e50l6y"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_ysunk"]
[ext_resource type="PackedScene" uid="uid://b55077ix48gnr" path="res://Levels/demo_level.tscn" id="2_orgki"]
[ext_resource type="FontFile" uid="uid://b757x5h1mp6k0" path="res://Art/monogram/ttf/monogram.ttf" id="3_8wloi"]
[ext_resource type="Texture2D" uid="uid://vuo366qux5ve" path="res://Art/Pixel Art GUI Elements/main_menu.png" id="4_4ku2f"]
[ext_resource type="Texture2D" uid="uid://d2rkann4favw8" path="res://Art/Pixel Art GUI Elements/title.png" id="5_w1kko"]
[ext_resource type="Texture2D" uid="uid://cs4bqi2bbt2jf" path="res://Art/Pixel Art GUI Elements/level_select_bg.png" id="6_j4yiq"]
[ext_resource type="PackedScene" uid="uid://e7pmabjutupx" path="res://UI/level_select_button.tscn" id="7_l4gvv"]
[ext_resource type="Texture2D" uid="uid://cjgg3ku0qumj2" path="res://Art/Pixel Art GUI Elements/level_select_buttons.png" id="8_qu8tt"]

[sub_resource type="LabelSettings" id="LabelSettings_ir7em"]
font = ExtResource("3_8wloi")
font_size = 24

[sub_resource type="AtlasTexture" id="AtlasTexture_ba320"]
atlas = ExtResource("4_4ku2f")
region = Rect2(0, 0, 93, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8ktv"]
atlas = ExtResource("4_4ku2f")
region = Rect2(0, 81, 67, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v3aw"]
atlas = ExtResource("4_4ku2f")
region = Rect2(68, 81, 67, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cleur"]
atlas = ExtResource("4_4ku2f")
region = Rect2(0, 98, 67, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1jk4"]
atlas = ExtResource("4_4ku2f")
region = Rect2(68, 98, 67, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5vj5"]
atlas = ExtResource("4_4ku2f")
region = Rect2(0, 115, 67, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4v22"]
atlas = ExtResource("4_4ku2f")
region = Rect2(68, 115, 67, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xpkg"]
atlas = ExtResource("8_qu8tt")
region = Rect2(0, 0, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueowb"]
atlas = ExtResource("8_qu8tt")
region = Rect2(27, 0, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp7yl"]
atlas = ExtResource("8_qu8tt")
region = Rect2(0, 17, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipsyd"]
atlas = ExtResource("8_qu8tt")
region = Rect2(27, 17, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij4ma"]
atlas = ExtResource("8_qu8tt")
region = Rect2(0, 34, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_atnch"]
atlas = ExtResource("8_qu8tt")
region = Rect2(27, 34, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7b1k"]
atlas = ExtResource("8_qu8tt")
region = Rect2(54, 0, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c8vv"]
atlas = ExtResource("8_qu8tt")
region = Rect2(81, 0, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3iha"]
atlas = ExtResource("8_qu8tt")
region = Rect2(54, 17, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma5m0"]
atlas = ExtResource("8_qu8tt")
region = Rect2(81, 17, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxicy"]
atlas = ExtResource("8_qu8tt")
region = Rect2(54, 34, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aukbb"]
atlas = ExtResource("8_qu8tt")
region = Rect2(81, 34, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_30eyf"]
atlas = ExtResource("8_qu8tt")
region = Rect2(0, 85, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q55m5"]
atlas = ExtResource("8_qu8tt")
region = Rect2(27, 85, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8vqk"]
atlas = ExtResource("8_qu8tt")
region = Rect2(0, 102, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7snyf"]
atlas = ExtResource("8_qu8tt")
region = Rect2(27, 102, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5weiw"]
atlas = ExtResource("8_qu8tt")
region = Rect2(0, 119, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mujv5"]
atlas = ExtResource("8_qu8tt")
region = Rect2(27, 119, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nvkb"]
atlas = ExtResource("8_qu8tt")
region = Rect2(54, 85, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6er3e"]
atlas = ExtResource("8_qu8tt")
region = Rect2(81, 85, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j04ue"]
atlas = ExtResource("8_qu8tt")
region = Rect2(54, 102, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrsj4"]
atlas = ExtResource("8_qu8tt")
region = Rect2(81, 102, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_00vdb"]
atlas = ExtResource("8_qu8tt")
region = Rect2(54, 119, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ubl"]
atlas = ExtResource("8_qu8tt")
region = Rect2(82, 119, 25, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqmr7"]
atlas = ExtResource("8_qu8tt")
region = Rect2(0, 170, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3tqs"]
atlas = ExtResource("8_qu8tt")
region = Rect2(27, 170, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhs3f"]
atlas = ExtResource("8_qu8tt")
region = Rect2(0, 187, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g35pk"]
atlas = ExtResource("8_qu8tt")
region = Rect2(27, 187, 26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppoji"]
atlas = ExtResource("8_qu8tt")
region = Rect2(0, 255, 53, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy7vu"]
atlas = ExtResource("8_qu8tt")
region = Rect2(54, 255, 53, 16)

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
script = ExtResource("1_ysunk")

[node name="demo_level" parent="." instance=ExtResource("2_orgki")]
z_index = -20
position = Vector2(167.885, 0)
scale = Vector2(2.19, 2.19)

[node name="shaded_rect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 967.0
offset_bottom = 545.0
color = Color(0, 0, 0, 0.592157)

[node name="version_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -26.0
offset_right = 111.0
offset_bottom = -7.0
grow_vertical = 0
text = "Game Jam v1"
label_settings = SubResource("LabelSettings_ir7em")
horizontal_alignment = 1

[node name="menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="title" type="TextureRect" parent="menu"]
layout_mode = 0
offset_left = 64.0
offset_top = 23.0
offset_right = 286.0
offset_bottom = 68.0
scale = Vector2(3, 3)
texture = ExtResource("5_w1kko")

[node name="menu" type="TextureRect" parent="menu"]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 157.0
offset_bottom = 272.0
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_ba320")

[node name="new_game_button" type="TextureButton" parent="menu/menu"]
layout_mode = 2
offset_left = 13.3333
offset_top = 13.0
offset_right = 80.3333
offset_bottom = 29.0
texture_normal = SubResource("AtlasTexture_o8ktv")
texture_pressed = SubResource("AtlasTexture_1v3aw")

[node name="level_select_button" type="TextureButton" parent="menu/menu"]
layout_mode = 2
offset_left = 13.3333
offset_top = 32.0
offset_right = 80.3333
offset_bottom = 48.0
texture_normal = SubResource("AtlasTexture_cleur")
texture_pressed = SubResource("AtlasTexture_v1jk4")

[node name="settings_button" type="TextureButton" parent="menu/menu"]
visible = false
layout_mode = 2
offset_left = 13.3333
offset_top = 51.0
offset_right = 80.3333
offset_bottom = 67.0
texture_normal = SubResource("AtlasTexture_v5vj5")
texture_pressed = SubResource("AtlasTexture_a4v22")

[node name="level_select" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="bg" type="TextureRect" parent="level_select"]
layout_mode = 1
offset_left = 17.0
offset_top = 23.0
offset_right = 177.0
offset_bottom = 183.0
scale = Vector2(3, 3)
texture = ExtResource("6_j4yiq")

[node name="level_select_button" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 10.3333
offset_top = 10.3333
offset_right = 36.3333
offset_bottom = 26.3333
texture_normal = SubResource("AtlasTexture_1xpkg")
texture_pressed = SubResource("AtlasTexture_ueowb")

[node name="level_select_button2" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 38.6667
offset_top = 9.66667
offset_right = 64.6667
offset_bottom = 25.6667
texture_normal = SubResource("AtlasTexture_fp7yl")
texture_pressed = SubResource("AtlasTexture_ipsyd")
scene_path = "res://Levels/level_1_2.tscn"

[node name="level_select_button3" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 67.6667
offset_top = 10.0
offset_right = 93.6667
offset_bottom = 26.0
texture_normal = SubResource("AtlasTexture_ij4ma")
texture_pressed = SubResource("AtlasTexture_atnch")
scene_path = "res://Levels/level_1_3.tscn"

[node name="level_select_button4" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0

[node name="level_select_button5" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0

[node name="level_select_button6" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 10.3333
offset_top = 29.0
offset_right = 36.3333
offset_bottom = 45.0
texture_normal = SubResource("AtlasTexture_o7b1k")
texture_pressed = SubResource("AtlasTexture_4c8vv")
scene_path = "res://Levels/level_2_1.tscn"

[node name="level_select_button7" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 39.0
offset_top = 29.3333
offset_right = 65.0
offset_bottom = 45.3333
texture_normal = SubResource("AtlasTexture_w3iha")
texture_pressed = SubResource("AtlasTexture_ma5m0")
scene_path = "res://Levels/level_2_2.tscn"

[node name="level_select_button8" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 68.3333
offset_top = 29.3333
offset_right = 94.3333
offset_bottom = 45.3333
texture_normal = SubResource("AtlasTexture_qxicy")
texture_pressed = SubResource("AtlasTexture_aukbb")
scene_path = "res://Levels/level_2_3.tscn"

[node name="level_select_button9" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 10.0
offset_top = 47.6667
offset_right = 36.0
offset_bottom = 63.6667
texture_normal = SubResource("AtlasTexture_30eyf")
texture_pressed = SubResource("AtlasTexture_q55m5")
scene_path = "res://Levels/level_3_1.tscn"

[node name="level_select_button10" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 39.0
offset_top = 48.0
offset_right = 65.0
offset_bottom = 64.0
texture_normal = SubResource("AtlasTexture_t8vqk")
texture_pressed = SubResource("AtlasTexture_7snyf")
scene_path = "res://Levels/level_3_2.tscn"

[node name="level_select_button11" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 68.0
offset_top = 48.0
offset_right = 94.0
offset_bottom = 64.0
texture_normal = SubResource("AtlasTexture_5weiw")
texture_pressed = SubResource("AtlasTexture_mujv5")
scene_path = "res://Levels/level_3_3.tscn"

[node name="level_select_button12" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 10.0
offset_top = 67.0
offset_right = 36.0
offset_bottom = 83.0
texture_normal = SubResource("AtlasTexture_2nvkb")
texture_pressed = SubResource("AtlasTexture_6er3e")
scene_path = "res://Levels/level_4_1.tscn"

[node name="level_select_button13" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 39.0
offset_top = 67.0
offset_right = 65.0
offset_bottom = 83.0
texture_normal = SubResource("AtlasTexture_j04ue")
texture_pressed = SubResource("AtlasTexture_qrsj4")
scene_path = "res://Levels/level_4_2.tscn"

[node name="level_select_button14" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 67.6667
offset_top = 67.0
offset_right = 93.6667
offset_bottom = 83.0
texture_normal = SubResource("AtlasTexture_00vdb")
texture_pressed = SubResource("AtlasTexture_o5ubl")
scene_path = "res://Levels/level_4_3.tscn"

[node name="level_select_button15" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 10.0
offset_top = 86.0
offset_right = 36.0
offset_bottom = 102.0
texture_normal = SubResource("AtlasTexture_wqmr7")
texture_pressed = SubResource("AtlasTexture_t3tqs")
scene_path = "res://Levels/level_5_1.tscn"

[node name="level_select_button16" parent="level_select/bg" instance=ExtResource("7_l4gvv")]
layout_mode = 0
offset_left = 39.0
offset_top = 85.6667
offset_right = 65.0
offset_bottom = 101.667
texture_normal = SubResource("AtlasTexture_mhs3f")
texture_pressed = SubResource("AtlasTexture_g35pk")
scene_path = "res://Levels/level_5_2.tscn"

[node name="back_button" type="TextureButton" parent="level_select/bg"]
layout_mode = 0
offset_left = 8.66667
offset_top = 134.333
offset_right = 61.6667
offset_bottom = 150.333
texture_normal = SubResource("AtlasTexture_ppoji")
texture_pressed = SubResource("AtlasTexture_gy7vu")

[connection signal="pressed" from="menu/menu/new_game_button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="menu/menu/level_select_button" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="menu/menu/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="level_select/bg/back_button" to="." method="_on_back_button_pressed"]
